# realtimeSTT

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  stt.py  workers_backup.py  标点符号时间戳修复说明.md  问题修复说明.md
data/: style.qss
onnx/: config.yaml  ctctokens.txt  tokens.txt
src/: __init__.py  audio.py  config.py  logger.py  models.py  ui.py  workers.py
